cm.output
Terminals unused in grammar

   ERROR


Grammar

    0 $accept: program $end

    1 program: declaration_list

    2 declaration_list: declaration_list declaration
    3                 | declaration

    4 declaration: var_declaration
    5            | fun_declaration

    6 $@1: %empty

    7 var_declaration: type_specifier ID $@1 SEMI

    8 $@2: %empty

    9 $@3: %empty

   10 var_declaration: type_specifier ID $@2 LSB NUM $@3 RSB SEMI

   11 type_specifier: INT
   12               | VOID

   13 $@4: %empty

   14 fun_declaration: type_specifier ID $@4 LPAREN params RPAREN compound_stmt

   15 params: param_list
   16       | VOID

   17 param_list: param_list COMMA param
   18           | param

   19 param: type_specifier ID

   20 $@5: %empty

   21 param: type_specifier ID $@5 LSB RSB

   22 compound_stmt: LCB local_declarations statement_list RCB

   23 local_declarations: local_declarations var_declaration
   24                   | %empty

   25 statement_list: statement_list statement
   26               | %empty

   27 statement: expression_stmt
   28          | compound_stmt
   29          | selection_stmt
   30          | iteration_stmt
   31          | return_stmt

   32 expression_stmt: expression SEMI
   33                | SEMI

   34 selection_stmt: IF LPAREN expression RPAREN statement
   35               | IF LPAREN expression RPAREN statement ELSE statement

   36 iteration_stmt: WHILE LPAREN expression RPAREN statement

   37 return_stmt: RETURN SEMI
   38            | RETURN expression SEMI

   39 expression: var ASSIGN expression
   40           | simple_expression

   41 var: ID

   42 $@6: %empty

   43 var: ID $@6 LSB expression RSB

   44 simple_expression: additive_expression LTE additive_expression
   45                  | additive_expression LT additive_expression
   46                  | additive_expression GT additive_expression
   47                  | additive_expression GTE additive_expression
   48                  | additive_expression EQ additive_expression
   49                  | additive_expression NE additive_expression
   50                  | additive_expression

   51 additive_expression: additive_expression PLUS term
   52                    | additive_expression MINUS term
   53                    | term

   54 term: term TIMES factor
   55     | term OVER factor
   56     | factor

   57 factor: LPAREN expression RPAREN
   58       | var
   59       | call
   60       | NUM

   61 $@7: %empty

   62 call: ID $@7 LPAREN args RPAREN

   63 args: arg_list
   64     | %empty

   65 arg_list: arg_list COMMA expression
   66         | expression


Terminals, with rules where they appear

$end (0) 0
error (256)
ELSE (258) 35
IF (259) 34 35
INT (260) 11
RETURN (261) 37 38
VOID (262) 12 16
WHILE (263) 36
ID (264) 7 10 14 19 21 41 43 62
NUM (265) 10 60
ASSIGN (266) 39
EQ (267) 48
PLUS (268) 51
MINUS (269) 52
TIMES (270) 54
OVER (271) 55
LTE (272) 44
LT (273) 45
GTE (274) 47
GT (275) 46
NE (276) 49
LPAREN (277) 14 34 35 36 57 62
RPAREN (278) 14 34 35 36 57 62
SEMI (279) 7 10 32 33 37 38
COMMA (280) 17 65
LSB (281) 10 21 43
RSB (282) 10 21 43
LCB (283) 22
RCB (284) 22
ERROR (285)
LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
program (33)
    on left: 1, on right: 0
declaration_list (34)
    on left: 2 3, on right: 1 2
declaration (35)
    on left: 4 5, on right: 2 3
var_declaration (36)
    on left: 7 10, on right: 4 23
$@1 (37)
    on left: 6, on right: 7
$@2 (38)
    on left: 8, on right: 10
$@3 (39)
    on left: 9, on right: 10
type_specifier (40)
    on left: 11 12, on right: 7 10 14 19 21
fun_declaration (41)
    on left: 14, on right: 5
$@4 (42)
    on left: 13, on right: 14
params (43)
    on left: 15 16, on right: 14
param_list (44)
    on left: 17 18, on right: 15 17
param (45)
    on left: 19 21, on right: 17 18
$@5 (46)
    on left: 20, on right: 21
compound_stmt (47)
    on left: 22, on right: 14 28
local_declarations (48)
    on left: 23 24, on right: 22 23
statement_list (49)
    on left: 25 26, on right: 22 25
statement (50)
    on left: 27 28 29 30 31, on right: 25 34 35 36
expression_stmt (51)
    on left: 32 33, on right: 27
selection_stmt (52)
    on left: 34 35, on right: 29
iteration_stmt (53)
    on left: 36, on right: 30
return_stmt (54)
    on left: 37 38, on right: 31
expression (55)
    on left: 39 40, on right: 32 34 35 36 38 39 43 57 65 66
var (56)
    on left: 41 43, on right: 39 58
$@6 (57)
    on left: 42, on right: 43
simple_expression (58)
    on left: 44 45 46 47 48 49 50, on right: 40
additive_expression (59)
    on left: 51 52 53, on right: 44 45 46 47 48 49 50 51 52
term (60)
    on left: 54 55 56, on right: 51 52 53 54 55
factor (61)
    on left: 57 58 59 60, on right: 54 55 56
call (62)
    on left: 62, on right: 59
$@7 (63)
    on left: 61, on right: 62
args (64)
    on left: 63 64, on right: 62
arg_list (65)
    on left: 65 66, on right: 63 65


State 0

    0 $accept: . program $end

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    program           go to state 3
    declaration_list  go to state 4
    declaration       go to state 5
    var_declaration   go to state 6
    type_specifier    go to state 7
    fun_declaration   go to state 8


State 1

   11 type_specifier: INT .

    $default  reduce using rule 11 (type_specifier)


State 2

   12 type_specifier: VOID .

    $default  reduce using rule 12 (type_specifier)


State 3

    0 $accept: program . $end

    $end  shift, and go to state 9


State 4

    1 program: declaration_list .
    2 declaration_list: declaration_list . declaration

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 1 (program)

    declaration      go to state 10
    var_declaration  go to state 6
    type_specifier   go to state 7
    fun_declaration  go to state 8


State 5

    3 declaration_list: declaration .

    $default  reduce using rule 3 (declaration_list)


State 6

    4 declaration: var_declaration .

    $default  reduce using rule 4 (declaration)


State 7

    7 var_declaration: type_specifier . ID $@1 SEMI
   10                | type_specifier . ID $@2 LSB NUM $@3 RSB SEMI
   14 fun_declaration: type_specifier . ID $@4 LPAREN params RPAREN compound_stmt

    ID  shift, and go to state 11


State 8

    5 declaration: fun_declaration .

    $default  reduce using rule 5 (declaration)


State 9

    0 $accept: program $end .

    $default  accept


State 10

    2 declaration_list: declaration_list declaration .

    $default  reduce using rule 2 (declaration_list)


State 11

    7 var_declaration: type_specifier ID . $@1 SEMI
   10                | type_specifier ID . $@2 LSB NUM $@3 RSB SEMI
   14 fun_declaration: type_specifier ID . $@4 LPAREN params RPAREN compound_stmt

    LPAREN    reduce using rule 13 ($@4)
    LSB       reduce using rule 8 ($@2)
    $default  reduce using rule 6 ($@1)

    $@1  go to state 12
    $@2  go to state 13
    $@4  go to state 14


State 12

    7 var_declaration: type_specifier ID $@1 . SEMI

    SEMI  shift, and go to state 15


State 13

   10 var_declaration: type_specifier ID $@2 . LSB NUM $@3 RSB SEMI

    LSB  shift, and go to state 16


State 14

   14 fun_declaration: type_specifier ID $@4 . LPAREN params RPAREN compound_stmt

    LPAREN  shift, and go to state 17


State 15

    7 var_declaration: type_specifier ID $@1 SEMI .

    $default  reduce using rule 7 (var_declaration)


State 16

   10 var_declaration: type_specifier ID $@2 LSB . NUM $@3 RSB SEMI

    NUM  shift, and go to state 18


State 17

   14 fun_declaration: type_specifier ID $@4 LPAREN . params RPAREN compound_stmt

    INT   shift, and go to state 1
    VOID  shift, and go to state 19

    type_specifier  go to state 20
    params          go to state 21
    param_list      go to state 22
    param           go to state 23


State 18

   10 var_declaration: type_specifier ID $@2 LSB NUM . $@3 RSB SEMI

    $default  reduce using rule 9 ($@3)

    $@3  go to state 24


State 19

   12 type_specifier: VOID .
   16 params: VOID .

    RPAREN    reduce using rule 16 (params)
    $default  reduce using rule 12 (type_specifier)


State 20

   19 param: type_specifier . ID
   21      | type_specifier . ID $@5 LSB RSB

    ID  shift, and go to state 25


State 21

   14 fun_declaration: type_specifier ID $@4 LPAREN params . RPAREN compound_stmt

    RPAREN  shift, and go to state 26


State 22

   15 params: param_list .
   17 param_list: param_list . COMMA param

    COMMA  shift, and go to state 27

    $default  reduce using rule 15 (params)


State 23

   18 param_list: param .

    $default  reduce using rule 18 (param_list)


State 24

   10 var_declaration: type_specifier ID $@2 LSB NUM $@3 . RSB SEMI

    RSB  shift, and go to state 28


State 25

   19 param: type_specifier ID .
   21      | type_specifier ID . $@5 LSB RSB

    LSB       reduce using rule 20 ($@5)
    $default  reduce using rule 19 (param)

    $@5  go to state 29


State 26

   14 fun_declaration: type_specifier ID $@4 LPAREN params RPAREN . compound_stmt

    LCB  shift, and go to state 30

    compound_stmt  go to state 31


State 27

   17 param_list: param_list COMMA . param

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    type_specifier  go to state 20
    param           go to state 32


State 28

   10 var_declaration: type_specifier ID $@2 LSB NUM $@3 RSB . SEMI

    SEMI  shift, and go to state 33


State 29

   21 param: type_specifier ID $@5 . LSB RSB

    LSB  shift, and go to state 34


State 30

   22 compound_stmt: LCB . local_declarations statement_list RCB

    $default  reduce using rule 24 (local_declarations)

    local_declarations  go to state 35


State 31

   14 fun_declaration: type_specifier ID $@4 LPAREN params RPAREN compound_stmt .

    $default  reduce using rule 14 (fun_declaration)


State 32

   17 param_list: param_list COMMA param .

    $default  reduce using rule 17 (param_list)


State 33

   10 var_declaration: type_specifier ID $@2 LSB NUM $@3 RSB SEMI .

    $default  reduce using rule 10 (var_declaration)


State 34

   21 param: type_specifier ID $@5 LSB . RSB

    RSB  shift, and go to state 36


State 35

   22 compound_stmt: LCB local_declarations . statement_list RCB
   23 local_declarations: local_declarations . var_declaration

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 26 (statement_list)

    var_declaration  go to state 37
    type_specifier   go to state 38
    statement_list   go to state 39


State 36

   21 param: type_specifier ID $@5 LSB RSB .

    $default  reduce using rule 21 (param)


State 37

   23 local_declarations: local_declarations var_declaration .

    $default  reduce using rule 23 (local_declarations)


State 38

    7 var_declaration: type_specifier . ID $@1 SEMI
   10                | type_specifier . ID $@2 LSB NUM $@3 RSB SEMI

    ID  shift, and go to state 40


State 39

   22 compound_stmt: LCB local_declarations statement_list . RCB
   25 statement_list: statement_list . statement

    IF      shift, and go to state 41
    RETURN  shift, and go to state 42
    WHILE   shift, and go to state 43
    ID      shift, and go to state 44
    NUM     shift, and go to state 45
    LPAREN  shift, and go to state 46
    SEMI    shift, and go to state 47
    LCB     shift, and go to state 30
    RCB     shift, and go to state 48

    compound_stmt        go to state 49
    statement            go to state 50
    expression_stmt      go to state 51
    selection_stmt       go to state 52
    iteration_stmt       go to state 53
    return_stmt          go to state 54
    expression           go to state 55
    var                  go to state 56
    simple_expression    go to state 57
    additive_expression  go to state 58
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61


State 40

    7 var_declaration: type_specifier ID . $@1 SEMI
   10                | type_specifier ID . $@2 LSB NUM $@3 RSB SEMI

    LSB       reduce using rule 8 ($@2)
    $default  reduce using rule 6 ($@1)

    $@1  go to state 12
    $@2  go to state 13


State 41

   34 selection_stmt: IF . LPAREN expression RPAREN statement
   35               | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 62


State 42

   37 return_stmt: RETURN . SEMI
   38            | RETURN . expression SEMI

    ID      shift, and go to state 44
    NUM     shift, and go to state 45
    LPAREN  shift, and go to state 46
    SEMI    shift, and go to state 63

    expression           go to state 64
    var                  go to state 56
    simple_expression    go to state 57
    additive_expression  go to state 58
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61


State 43

   36 iteration_stmt: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 65


State 44

   41 var: ID .
   43    | ID . $@6 LSB expression RSB
   62 call: ID . $@7 LPAREN args RPAREN

    LPAREN    reduce using rule 61 ($@7)
    LSB       reduce using rule 42 ($@6)
    $default  reduce using rule 41 (var)

    $@6  go to state 66
    $@7  go to state 67


State 45

   60 factor: NUM .

    $default  reduce using rule 60 (factor)


State 46

   57 factor: LPAREN . expression RPAREN

    ID      shift, and go to state 44
    NUM     shift, and go to state 45
    LPAREN  shift, and go to state 46

    expression           go to state 68
    var                  go to state 56
    simple_expression    go to state 57
    additive_expression  go to state 58
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61


State 47

   33 expression_stmt: SEMI .

    $default  reduce using rule 33 (expression_stmt)


State 48

   22 compound_stmt: LCB local_declarations statement_list RCB .

    $default  reduce using rule 22 (compound_stmt)


State 49

   28 statement: compound_stmt .

    $default  reduce using rule 28 (statement)


State 50

   25 statement_list: statement_list statement .

    $default  reduce using rule 25 (statement_list)


State 51

   27 statement: expression_stmt .

    $default  reduce using rule 27 (statement)


State 52

   29 statement: selection_stmt .

    $default  reduce using rule 29 (statement)


State 53

   30 statement: iteration_stmt .

    $default  reduce using rule 30 (statement)


State 54

   31 statement: return_stmt .

    $default  reduce using rule 31 (statement)


State 55

   32 expression_stmt: expression . SEMI

    SEMI  shift, and go to state 69


State 56

   39 expression: var . ASSIGN expression
   58 factor: var .

    ASSIGN  shift, and go to state 70

    $default  reduce using rule 58 (factor)


State 57

   40 expression: simple_expression .

    $default  reduce using rule 40 (expression)


State 58

   44 simple_expression: additive_expression . LTE additive_expression
   45                  | additive_expression . LT additive_expression
   46                  | additive_expression . GT additive_expression
   47                  | additive_expression . GTE additive_expression
   48                  | additive_expression . EQ additive_expression
   49                  | additive_expression . NE additive_expression
   50                  | additive_expression .
   51 additive_expression: additive_expression . PLUS term
   52                    | additive_expression . MINUS term

    EQ     shift, and go to state 71
    PLUS   shift, and go to state 72
    MINUS  shift, and go to state 73
    LTE    shift, and go to state 74
    LT     shift, and go to state 75
    GTE    shift, and go to state 76
    GT     shift, and go to state 77
    NE     shift, and go to state 78

    $default  reduce using rule 50 (simple_expression)


State 59

   53 additive_expression: term .
   54 term: term . TIMES factor
   55     | term . OVER factor

    TIMES  shift, and go to state 79
    OVER   shift, and go to state 80

    $default  reduce using rule 53 (additive_expression)


State 60

   56 term: factor .

    $default  reduce using rule 56 (term)


State 61

   59 factor: call .

    $default  reduce using rule 59 (factor)


State 62

   34 selection_stmt: IF LPAREN . expression RPAREN statement
   35               | IF LPAREN . expression RPAREN statement ELSE statement

    ID      shift, and go to state 44
    NUM     shift, and go to state 45
    LPAREN  shift, and go to state 46

    expression           go to state 81
    var                  go to state 56
    simple_expression    go to state 57
    additive_expression  go to state 58
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61


State 63

   37 return_stmt: RETURN SEMI .

    $default  reduce using rule 37 (return_stmt)


State 64

   38 return_stmt: RETURN expression . SEMI

    SEMI  shift, and go to state 82


State 65

   36 iteration_stmt: WHILE LPAREN . expression RPAREN statement

    ID      shift, and go to state 44
    NUM     shift, and go to state 45
    LPAREN  shift, and go to state 46

    expression           go to state 83
    var                  go to state 56
    simple_expression    go to state 57
    additive_expression  go to state 58
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61


State 66

   43 var: ID $@6 . LSB expression RSB

    LSB  shift, and go to state 84


State 67

   62 call: ID $@7 . LPAREN args RPAREN

    LPAREN  shift, and go to state 85


State 68

   57 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 86


State 69

   32 expression_stmt: expression SEMI .

    $default  reduce using rule 32 (expression_stmt)


State 70

   39 expression: var ASSIGN . expression

    ID      shift, and go to state 44
    NUM     shift, and go to state 45
    LPAREN  shift, and go to state 46

    expression           go to state 87
    var                  go to state 56
    simple_expression    go to state 57
    additive_expression  go to state 58
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61


State 71

   48 simple_expression: additive_expression EQ . additive_expression

    ID      shift, and go to state 44
    NUM     shift, and go to state 45
    LPAREN  shift, and go to state 46

    var                  go to state 88
    additive_expression  go to state 89
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61


State 72

   51 additive_expression: additive_expression PLUS . term

    ID      shift, and go to state 44
    NUM     shift, and go to state 45
    LPAREN  shift, and go to state 46

    var     go to state 88
    term    go to state 90
    factor  go to state 60
    call    go to state 61


State 73

   52 additive_expression: additive_expression MINUS . term

    ID      shift, and go to state 44
    NUM     shift, and go to state 45
    LPAREN  shift, and go to state 46

    var     go to state 88
    term    go to state 91
    factor  go to state 60
    call    go to state 61


State 74

   44 simple_expression: additive_expression LTE . additive_expression

    ID      shift, and go to state 44
    NUM     shift, and go to state 45
    LPAREN  shift, and go to state 46

    var                  go to state 88
    additive_expression  go to state 92
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61


State 75

   45 simple_expression: additive_expression LT . additive_expression

    ID      shift, and go to state 44
    NUM     shift, and go to state 45
    LPAREN  shift, and go to state 46

    var                  go to state 88
    additive_expression  go to state 93
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61


State 76

   47 simple_expression: additive_expression GTE . additive_expression

    ID      shift, and go to state 44
    NUM     shift, and go to state 45
    LPAREN  shift, and go to state 46

    var                  go to state 88
    additive_expression  go to state 94
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61


State 77

   46 simple_expression: additive_expression GT . additive_expression

    ID      shift, and go to state 44
    NUM     shift, and go to state 45
    LPAREN  shift, and go to state 46

    var                  go to state 88
    additive_expression  go to state 95
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61


State 78

   49 simple_expression: additive_expression NE . additive_expression

    ID      shift, and go to state 44
    NUM     shift, and go to state 45
    LPAREN  shift, and go to state 46

    var                  go to state 88
    additive_expression  go to state 96
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61


State 79

   54 term: term TIMES . factor

    ID      shift, and go to state 44
    NUM     shift, and go to state 45
    LPAREN  shift, and go to state 46

    var     go to state 88
    factor  go to state 97
    call    go to state 61


State 80

   55 term: term OVER . factor

    ID      shift, and go to state 44
    NUM     shift, and go to state 45
    LPAREN  shift, and go to state 46

    var     go to state 88
    factor  go to state 98
    call    go to state 61


State 81

   34 selection_stmt: IF LPAREN expression . RPAREN statement
   35               | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 99


State 82

   38 return_stmt: RETURN expression SEMI .

    $default  reduce using rule 38 (return_stmt)


State 83

   36 iteration_stmt: WHILE LPAREN expression . RPAREN statement

    RPAREN  shift, and go to state 100


State 84

   43 var: ID $@6 LSB . expression RSB

    ID      shift, and go to state 44
    NUM     shift, and go to state 45
    LPAREN  shift, and go to state 46

    expression           go to state 101
    var                  go to state 56
    simple_expression    go to state 57
    additive_expression  go to state 58
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61


State 85

   62 call: ID $@7 LPAREN . args RPAREN

    ID      shift, and go to state 44
    NUM     shift, and go to state 45
    LPAREN  shift, and go to state 46

    $default  reduce using rule 64 (args)

    expression           go to state 102
    var                  go to state 56
    simple_expression    go to state 57
    additive_expression  go to state 58
    term                 go to state 59
    factor               go to state 60
    call                 go to state 61
    args                 go to state 103
    arg_list             go to state 104


State 86

   57 factor: LPAREN expression RPAREN .

    $default  reduce using rule 57 (factor)


State 87

   39 expression: var ASSIGN expression .

    $default  reduce using rule 39 (expression)


State 88

   58 factor: var .

    $default  reduce using rule 58 (factor)


State 89

   48 simple_expression: additive_expression EQ additive_expression .
   51 additive_expression: additive_expression . PLUS term
   52                    | additive_expression . MINUS term

    PLUS   shift, and go to state 72
    MINUS  shift, and go to state 73

    $default  reduce using rule 48 (simple_expression)


State 90

   51 additive_expression: additive_expression PLUS term .
   54 term: term . TIMES factor
   55     | term . OVER factor

    TIMES  shift, and go to state 79
    OVER   shift, and go to state 80

    $default  reduce using rule 51 (additive_expression)


State 91

   52 additive_expression: additive_expression MINUS term .
   54 term: term . TIMES factor
   55     | term . OVER factor

    TIMES  shift, and go to state 79
    OVER   shift, and go to state 80

    $default  reduce using rule 52 (additive_expression)


State 92

   44 simple_expression: additive_expression LTE additive_expression .
   51 additive_expression: additive_expression . PLUS term
   52                    | additive_expression . MINUS term

    PLUS   shift, and go to state 72
    MINUS  shift, and go to state 73

    $default  reduce using rule 44 (simple_expression)


State 93

   45 simple_expression: additive_expression LT additive_expression .
   51 additive_expression: additive_expression . PLUS term
   52                    | additive_expression . MINUS term

    PLUS   shift, and go to state 72
    MINUS  shift, and go to state 73

    $default  reduce using rule 45 (simple_expression)


State 94

   47 simple_expression: additive_expression GTE additive_expression .
   51 additive_expression: additive_expression . PLUS term
   52                    | additive_expression . MINUS term

    PLUS   shift, and go to state 72
    MINUS  shift, and go to state 73

    $default  reduce using rule 47 (simple_expression)


State 95

   46 simple_expression: additive_expression GT additive_expression .
   51 additive_expression: additive_expression . PLUS term
   52                    | additive_expression . MINUS term

    PLUS   shift, and go to state 72
    MINUS  shift, and go to state 73

    $default  reduce using rule 46 (simple_expression)


State 96

   49 simple_expression: additive_expression NE additive_expression .
   51 additive_expression: additive_expression . PLUS term
   52                    | additive_expression . MINUS term

    PLUS   shift, and go to state 72
    MINUS  shift, and go to state 73

    $default  reduce using rule 49 (simple_expression)


State 97

   54 term: term TIMES factor .

    $default  reduce using rule 54 (term)


State 98

   55 term: term OVER factor .

    $default  reduce using rule 55 (term)


State 99

   34 selection_stmt: IF LPAREN expression RPAREN . statement
   35               | IF LPAREN expression RPAREN . statement ELSE statement

    IF      shift, and go to state 41
    RETURN  shift, and go to state 42
    WHILE   shift, and go to state 43
    ID      shift, and go to state 44
    NUM     shift, and go to state 45
    LPAREN  shift, and go to state 46
    SEMI    shift, and go to state 47
    LCB     shift, and go to state 30
